--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="txt_signup">Sign up!</string>
     <string name="btn_login">Login</string>
     <string name="etxt_password" />
+    <string name="etxt_su_firstName">First Name:</string>
+    <string name="txt_su_lastName">Last Name:</string>
+    <string name="txt_su_username">Username:</string>
+    <string name="txt_su_password">Password:</string>
+    <string name="txt_su_password2">Re-enter Password:</string>
+    <string name="txt_su_email">Email:</string>
+    <string name="enter_your_first_name">enter your first name</string>
 </resources>
