--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="txt_su_password2">Re-enter Password:</string>
     <string name="txt_su_email">Email:</string>
     <string name="enter_your_first_name">enter your first name</string>
+    <string name="btn_su_signup">Sign Up!</string>
 </resources>
