--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="txt_su_email">Email:</string>
     <string name="enter_your_first_name">enter your first name</string>
     <string name="btn_su_signup">Sign Up!</string>
+    <string name="txt_lp_name">N/A</string>
 </resources>
