--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="txt_cm_receiver">To:</string>
     <string name="txt_cm_subject">Subject:</string>
     <string name="txt_cm_message">Message:</string>
+    <string name="btn_view">View</string>
+    <string name="txt_date">00/00/2024</string>
 
     <!-- Dropdown Items for Menu -->
     <string-array name="dropdownMenu_items">
